--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="using:Microsoft.Toolkit.Uwp.SampleApp.Controls"
-             xmlns:controls1="using:Microsoft.Toolkit.Uwp.UI.Controls"
+             xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
              xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
+             xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
+             xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
              xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
              RequestedTheme="Light">
 
@@ -518,12 +520,12 @@
         </Style>
 
         <Style x:Name="HamburgerExpanderItem"
-               TargetType="controls1:Expander">
+               TargetType="toolkitControls:Expander">
             <Setter Property="Header" Value="Header" />
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="controls1:Expander">
+                    <ControlTemplate TargetType="toolkitControls:Expander">
                         <Grid>
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -573,7 +575,7 @@
         </Style>
 
         <Style x:Key="HorizontalHamburgerMenu"
-               TargetType="controls1:HamburgerMenu">
+               TargetType="toolkitControls:HamburgerMenu">
             <Setter Property="HamburgerMenuTemplate">
                 <Setter.Value>
                     <DataTemplate>
@@ -587,14 +589,24 @@
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="controls1:HamburgerMenu">
-                        <Grid Background="{TemplateBinding PaneBackground}">
+                    <ControlTemplate TargetType="toolkitControls:HamburgerMenu">
+                        <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="48" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
 
-                            <Grid>
+                            <ContentPresenter x:Name="ContentPart"
+                                              Grid.Row="1"
+                                              AutomationProperties.Name="Content"
+                                              Content="{TemplateBinding Content}" />
+
+                            <toolkitControls:DropShadowPanel HorizontalContentAlignment="Stretch"
+                                                       VerticalContentAlignment="Stretch"
+                                                       BlurRadius="10"
+                                                       OffsetY="3"
+                                                       ShadowOpacity="0.4">
+                            <Grid Background="{TemplateBinding PaneBackground}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
@@ -669,11 +681,9 @@
                                 </ListView>
 
                             </Grid>
+                            </toolkitControls:DropShadowPanel>
 
-                            <ContentPresenter x:Name="ContentPart"
-                                              Grid.Row="1"
-                                              AutomationProperties.Name="Content"
-                                              Content="{TemplateBinding Content}" />
+
 
                         </Grid>
                     </ControlTemplate>
@@ -682,7 +692,7 @@
         </Style>
 
         <Style x:Key="VerticalHamburgerMenu"
-               TargetType="controls1:HamburgerMenu">
+               TargetType="toolkitControls:HamburgerMenu">
             <Setter Property="HamburgerMenuTemplate">
                 <Setter.Value>
                     <DataTemplate>
@@ -696,14 +706,14 @@
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="controls1:HamburgerMenu">
+                    <ControlTemplate TargetType="toolkitControls:HamburgerMenu">
                         <Grid>
                             <SplitView x:Name="MainSplitView"
-                                       DisplayMode="Inline"
+                                       DisplayMode="Overlay"
                                        IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                        IsTabStop="False"
-                                       OpenPaneLength="{TemplateBinding OpenPaneLength}"
-                                       PaneBackground="{TemplateBinding PaneBackground}">
+                                       PaneBackground="Transparent"
+                                       OpenPaneLength="{TemplateBinding OpenPaneLength}">
                                 <SplitView.Pane>
                                     <Grid x:Name="PaneGrid"
                                           FlowDirection="LeftToRight">
@@ -712,7 +722,18 @@
                                             <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
 
-                                        <Grid Background="{TemplateBinding PaneBackground}">
+                                        <Border Background="{TemplateBinding PaneBackground}"
+                                                Opacity="0.96"
+                                                Grid.RowSpan="2">
+                                            <interactivity:Interaction.Behaviors>
+                                                <behaviors:Blur AutomaticallyStart="True"
+                                                                    Delay="0"
+                                                                    Value="3"
+                                                                    Duration="0" />
+                                            </interactivity:Interaction.Behaviors>
+                                        </Border>
+
+                                        <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="48" />
                                                 <ColumnDefinition Width="*" />
