--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -8,7 +8,8 @@
              xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
              xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
              RequestedTheme="Light">
-
+    
+    
     <Application.Resources>
 
         <!--  Colors  -->
@@ -19,6 +20,9 @@
         <Color x:Key="Grey-05">#FFF0F0F0</Color>
         <Color x:Key="White">#FFFFFFFF</Color>
         <Color x:Key="Blue-01">#FF0078D7</Color>
+        <Color x:Key="Brand-Color">#3750D1</Color>
+
+        <SolidColorBrush x:Key="SystemControlHighlightAccentBrush" Color="{StaticResource Brand-Color}" />
 
         <!--  Brushes  -->
         <SolidColorBrush x:Key="Brush-Grey-01"
@@ -33,9 +37,10 @@
                          Color="{StaticResource Grey-05}" />
         <SolidColorBrush x:Key="Brush-White"
                          Color="{StaticResource White}" />
-
         <SolidColorBrush x:Key="Brush-Blue-01"
                          Color="{StaticResource Blue-01}" />
+        <SolidColorBrush x:Key="Brush-Brand-Color"
+                       Color="{StaticResource Brand-Color}" />
 
         <!--  Styles  -->
         <Style TargetType="TextBlock">
@@ -157,7 +162,7 @@
                                   VerticalAlignment="Bottom">
                                 <Rectangle x:Name="SelectionIndicator"
                                            Height="3"
-                                           Fill="{ThemeResource SystemControlForegroundAccentBrush}"
+                                           Fill="{ThemeResource SystemControlHighlightAccentBrush}"
                                            Opacity="0.0" />
                             </Grid>
                             <ContentPresenter x:Name="ContentPresenter"
@@ -246,7 +251,7 @@
                                   VerticalAlignment="Bottom">
                                 <Rectangle x:Name="SelectionIndicator"
                                            Height="3"
-                                           Fill="{ThemeResource SystemControlForegroundAccentBrush}"
+                                           Fill="{ThemeResource SystemControlHighlightAccentBrush}"
                                            Opacity="0.0" />
                             </Grid>
                             <ContentPresenter x:Name="ContentPresenter"
