--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -13,8 +13,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       x:Name="RootPage"
       extensions:StatusBar.IsVisible="False"
-      extensions:TitleBar.BackgroundColor="{StaticResource Grey-01}"
-      extensions:TitleBar.ButtonBackgroundColor="{StaticResource Grey-03}"
+      extensions:TitleBar.BackgroundColor="{StaticResource Brand-Color}"
+      extensions:TitleBar.ButtonBackgroundColor="{StaticResource Brand-Color}"
       extensions:TitleBar.ButtonForegroundColor="{StaticResource Grey-04}"
       extensions:TitleBar.ForegroundColor="{StaticResource Grey-04}"
       Loaded="Shell_OnLoaded"
@@ -174,11 +174,11 @@
                   Background="{StaticResource Brush-Grey-05}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*" />
-                    <ColumnDefinition />
+                    <ColumnDefinition  Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
-                    <RowDefinition Height="32" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid x:Name="DemoAreaGrid">
                     <StackPanel HorizontalAlignment="Center"
@@ -209,7 +209,8 @@
                                              IsRunning="True"/>-->
                 </Grid>
                 <Grid x:Name="InfoAreaGrid"
-                      Background="{StaticResource Brush-Grey-04}">
+                      Background="{StaticResource Brush-Grey-04}"
+                      Visibility="Collapsed">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition />
@@ -293,7 +294,8 @@
                                            HorizontalAlignment="Left"
                                            Background="{StaticResource Brush-Grey-04}"
                                            GripperForeground="White"
-                                           ParentLevel="1" />
+                                           ParentLevel="1" 
+                                           Visibility="Collapsed"/>
                 </Grid>
                 <Grid x:Name="waitRing"
                       Grid.RowSpan="2"
