--- a/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
@@ -32,6 +32,7 @@
     </Style>
 
     <Style x:Key="SimpleCommandBar" TargetType="CommandBar">
+        <Setter Property="Height" Value="48" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CommandBar">
